--- a/package.json
+++ b/package.json
@@ -36,8 +36,11 @@
     "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
+    "autoprefixer": "^9.2.1",
     "copy-webpack-plugin": "^4.5.3",
     "ejs-compiled-loader": "^1.1.0",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "postcss-cli": "^6.0.1",
+    "postcss-loader": "^3.0.0"
   }
 }
