--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "description": "A tiny webpack base project.",
   "main": "index.js",
   "scripts": {
-    "server:prod": "webpack-dev-server --mode=production",
     "server:dev": "webpack-dev-server --mode=development",
-    "output:prod": "webpack --mode=production",
-    "output:dev": "webpack --mode=development"
+    "output:dev": "webpack --mode=development",
+    "output:prod": "webpack --mode=production"
   },
   "author": "me",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-transform-react-jsx": "^7.2.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "ejs": "^2.6.1",
@@ -28,6 +28,7 @@
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.9.4",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "react-hot-loader": "^4.6.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
@@ -37,10 +38,13 @@
   },
   "dependencies": {
     "autoprefixer": "^9.2.1",
+    "babel-core": "^7.0.0-bridge.0",
     "copy-webpack-plugin": "^4.5.3",
     "ejs-compiled-loader": "^1.1.0",
     "jquery": "^3.3.1",
     "postcss-cli": "^6.0.1",
-    "postcss-loader": "^3.0.0"
+    "postcss-loader": "^3.0.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
   }
 }
